Fix bug of head

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<lang lang="es">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -30,12 +30,15 @@
     />
 
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Daniel Morales - Desarrollo Web y soluciones a la medida</title>
+    <title>Daniel Morales - Fullstack developer</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="./assets/img/LogoDanielMorales.png" alt="Logo Daniel Morales">
+        <img
+          src="./assets/img/LogoDanielMorales.png"
+          alt="Logo Daniel Morales"
+        />
         <a href="#">DM</a>
       </div>
       <nav class="menu" id="menu">
@@ -68,14 +71,14 @@
       <div class="img-danielmorales">
         <img
           src="./assets/img/danielmorales.png"
-          alt="Desarrollo web - Aplicaciones web a tu medida"
+          alt="Desarrollo web - Fullstack developer"
           title="Desarrollador web"
         />
       </div>
       <div class="informacion-danielmorales">
-          <h1 class="titulo-h1">Daniel Morales</h1>
-          <h2 class="titulo-h2">Desarrollador Web Jr.</h2>
-          <h3 class="titulo-h3">Fullstack developer</h3>
+        <h1 class="titulo-h1">Daniel Morales</h1>
+        <h2 class="titulo-h2">Desarrollador Web Jr.</h2>
+        <h3 class="titulo-h3">Fullstack developer</h3>
         <p>
           Desarrollador web autodidacta, especializado en <b>backend </b>y con
           conocimientos sólidos en <b>frontend.</b> Amante de las nuevas
@@ -85,7 +88,10 @@
           junior.
         </p>
         <div class="redes-danielmorales">
-          <img src="./assets/img/github_circle.svg" alt="Github Daniel Morales" />
+          <img
+            src="./assets/img/github_circle.svg"
+            alt="Github Daniel Morales"
+          />
           <img
             src="./assets/img/linkedin_circle.svg"
             alt="Linkedin Daniel Morales"
