--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
       <nav class="menu" id="menu">
         <ul>
           <li>
-            <a href="#">Inicio</a>
+            <a href="#" class="menu-item">Inicio</a>
           </li>
           <li>
-            <a href="#/curriculum">Curriculum</a>
+            <a href="#/curriculum" class="menu-item">Curriculum</a>
           </li>
           <li>
-            <a href="#/services">Servicios</a>
+            <a href="#/services" class="menu-item">Servicios</a>
           </li>
           <li>
-            <a href="#/skills">Habilidades</a>
+            <a href="#/skills" class="menu-item">Habilidades</a>
           </li>
           <li>
-            <a href="#/portfolio">Portafolio</a>
+            <a href="#/portfolio" class="menu-item">Portafolio</a>
           </li>
           <li>
-            <a href="#/contact">Contacto</a>
+            <a href="#/contact" class="menu-item">Contacto</a>
           </li>
         </ul>
       </nav>
@@ -68,6 +68,6 @@
     </header>
 
     <!-- Main Content -->
-    <section id="root"></section>
+    <div class="container-root"></div>
   <script src="bundle.js"></script></body>
 </html>
