Se empezo a añadir habilidades y portafolio

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="INDEX, FOLLOW" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="../src/assets/img/developer.svg"
-      sizes="any"
-    />
+    <link rel="icon" type="image/svg+xml" href="/developer.svg" sizes="any" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;600;700&display=swap"
       rel="stylesheet"
