--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="INDEX, FOLLOW" />
-    <link rel="icon" type="image/svg+xml" href="/developer.svg" sizes="any" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/img/developer.svg"
+      sizes="any"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;600;700&display=swap"
       rel="stylesheet"
@@ -24,13 +29,13 @@
       crossorigin="anonymous"
     />
     <title>Daniel Morales - Fullstack developer</title>
-  </head>
+  <link rel="icon" href="/assets/favicon.svg"></head>
   <body>
     <!-- Navegacion -->
     <header>
       <div class="logo">
         <img
-          src="img/LogoDanielMorales.png"
+          src="assets/img/LogoDanielMorales.png"
           alt="Logo Daniel Morales"
         />
         <a href="#">DM</a>
