--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="INDEX, FOLLOW" />
     <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./assets/img/developer.svg"
-      sizes="any"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;600;700&display=swap"
       rel="stylesheet"
     />
@@ -29,7 +23,7 @@
       crossorigin="anonymous"
     />
     <title>Daniel Morales - Fullstack developer</title>
-  <link rel="icon" href="/assets/favicon.svg"></head>
+  <link rel="icon" href="/assets/favicon.svg"><link href="main.css" rel="stylesheet"></head>
   <body>
     <!-- Navegacion -->
     <header>
