use lint and prettier to format code

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="keywords"
-    content="Desarrollo web, paginas web, backend, frontend, desarrollo de software, proyectos tecnologicos" />
+    content="Desarrollo web, paginas web, backend, frontend, desarrollo de software, proyectos tecnológicos" />
   <meta name="description"
     content="Soy desarrollador de software/web autodidacta, especializado en backend y con buenos conocimientos en fronted." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <!-- Navegacion -->
+  <!-- Navegación -->
   <header>
     <div class="logo">
       <img src="./assets/img/LogoDanielMorales.png" alt="Logo Daniel Morales" />
